Version 1.17.0

  * Add support for resolving default/fixed values of QName type. Now 
    the qualified value is represented in the <namespace>#<qname> form.

Version 1.16.0
  
  * New transformation: simplifier. It simplifies the schema graph
    by, for example, removing empty compositors where it would not
    change the semantics of the schema.

  * Added min() and max() accessors to the Particle and Compositor 
    semantic graph nodes.

  * Added optional strong include key to the schema-per-type
    transformation.

Version 1.15.0

  * Support for the simple type/simple content restriction facets.

  * Support for suppressing frontend warnings.
  
  * Support for suppressing full schema checking.

  * Support for the interface changes introduced in Xerces-C++ 3.0.0.b2.

Version 1.14.0

  * Support for referencing names in including schema in chameleon inclusion.

  * Support for native paths in include/import directives.

  * Support for UTF-32 and UTF-16 in wchar_t.

  * Fixed a bug in import stubs.
  
  * Got rid of warnings reported by g++-4.3.

Version 1.13.0

  * Support for anonymous list item and simple type restriction base
    in both parser and anonymous transformation.

Version 1.12.0

  * New transformations: anonymous and schema-per-type.

  * Optional location translator can now be passed to parser's
    c-tor to translate included and imported schema locations.

  * Support for the upcoming Xerces-C++ 3.0.0 release.

  * Upgraded to the new boost import stub.

  * Upgraded to the new xerces-c import stub.

Version 1.11.0

  * New transformation, xsd-frontend/transformations/restriction.hxx,
    copies omitted attributes and establishes associations between
    attributes, elements, and wildcards in complex type inheritance
    by restriction.

  * Upgraded to the new boost import stub.

Version 1.10.1

  * Add XML Schema error detection that is missing in Xerces-C++.

  * Update Xerces-C++ import stub to use the include directory