@@ -3,6 +3,10 @@ Version 1.17.0
   * Add support for resolving default/fixed values of QName type. Now 
     the qualified value is represented in the <namespace>#<qname> form.
 
+  * Anonymous transformation now passes the actual file path instead of
+    the empty string to the AnonymousNameTranslator::translate() function
+    for the translation unit.
+
 Version 1.16.0
   
   * New transformation: simplifier. It simplifies the schema graph
